--- a/Ab4d.SharpEngine.Samples.BlazorWebAssembly/Layout/NavMenu.razor.css
+++ b/Ab4d.SharpEngine.Samples.BlazorWebAssembly/Layout/NavMenu.razor.css
@@ -1,6 +1,6 @@
 .nav-submenu-link {
     height: 1.5rem !important;
-    line-height: 1.5rem !important;
+    /*line-height: 1.5rem !important;*/
 }
 
 .btn-toggle {
@@ -53,21 +53,21 @@
     padding-bottom: 0.5rem;
 }
 
-    .nav-item:first-of-type {
+/*    .nav-item:first-of-type {
         padding-top: 1rem;
     }
 
     .nav-item:last-of-type {
         padding-bottom: 1rem;
-    }
+    }*/
 
     .nav-item ::deep a {
         color: #d7d7d7;
         border-radius: 4px;
-        height: 3rem;
+        height: 2rem;
         display: flex;
         align-items: center;
-        line-height: 3rem;
+        /*line-height: 2rem;*/
     }
 
 .nav-item ::deep a.active {
