--- a/Ab4d.SharpEngine.Samples.BlazorWebAssembly/Pages/CommonSamples.razor
+++ b/Ab4d.SharpEngine.Samples.BlazorWebAssembly/Pages/CommonSamples.razor
@@ -42,7 +42,7 @@
     private string sample_title = "";
     private string sample_subtitle = "";
 
-    public SharpEngineSceneView MainSceneView => sharpEngineSceneView;
+    public SharpEngineSceneView? MainSceneView => sharpEngineSceneView;
 
     private CommonSample? _currentCommonSample;
     private CommonSample? _lastInitializedSample;
@@ -101,22 +101,25 @@
 
     private void ResetSample()
     {
-        sample_title = null;
-        sample_subtitle = null;
+        sample_title = "";
+        sample_subtitle = "";
 
-        // Remove all lights (new sample will set setup their own lights)
-        MainSceneView.Scene.Lights.Clear();
+        if (MainSceneView != null)
+        {
+            // Remove all lights (new sample will set setup their own lights)
+            MainSceneView.Scene.Lights.Clear();
 
-        // // Remove any registered event sources or drag surfaces
-        // _inputEventsManager.ResetEventSources();
-        // _inputEventsManager.RemoveAllDragSurfaces();
+            // // Remove any registered event sources or drag surfaces
+            // _inputEventsManager.ResetEventSources();
+            // _inputEventsManager.RemoveAllDragSurfaces();
 
-        // Call DisposeAllChildren on RootNode.
-        // Here we will also dispose all meshes and materials with textures (textures that are cached by the Scene or GpuDevice are not disposed).
-        // We also set runSceneCleanup to true so the Scene.Cleanup method is also called to release free empty memory blocks.
-        // Note that we must not dispose the RootNode without disposing the Scene.
-        MainSceneView.Scene.RootNode.DisposeAllChildren(disposeMeshes: true, disposeMaterials: true, disposeTextures: true, runSceneCleanup: true);
-
+            // Call DisposeAllChildren on RootNode.
+            // Here we will also dispose all meshes and materials with textures (textures that are cached by the Scene or GpuDevice are not disposed).
+            // We also set runSceneCleanup to true so the Scene.Cleanup method is also called to release free empty memory blocks.
+            // Note that we must not dispose the RootNode without disposing the Scene.
+            MainSceneView.Scene.RootNode.DisposeAllChildren(disposeMeshes: true, disposeMaterials: true, disposeTextures: true, runSceneCleanup: true);
+        }
+        
         _lastInitializedSample = null;
     }
 
@@ -127,7 +130,7 @@
 
         ResetSample();
 
-        if (_currentCommonSample == null)
+        if (_currentCommonSample == null || MainSceneView == null)
             return;
 
         _currentCommonSample.InitializeSharpEngineView(MainSceneView);
