--- a/Ab4d.SharpEngine.Samples.BlazorWebAssembly/Pages/Index.razor
+++ b/Ab4d.SharpEngine.Samples.BlazorWebAssembly/Pages/Index.razor
@@ -5,6 +5,7 @@
     protected override void OnInitialized()
     {
         // Navigate to the Common samples page on app start
-        Navigation.NavigateTo("/commonSamples", replace: true);
+        //Navigation.NavigateTo("/commonSamples", replace: true);
+        Navigation.NavigateTo("/quickStart", replace: true);
     }
 }
