--- a/Ab4d.SharpEngine.Samples.BlazorWebAssembly/Pages/QuickStart.razor
+++ b/Ab4d.SharpEngine.Samples.BlazorWebAssembly/Pages/QuickStart.razor
@@ -37,6 +37,7 @@
     <button class="btn-primary" style="margin-top: 3pt" @onclick="ChangeMaterial">Change material</button>
     <button class="btn-primary" style="margin-top: 3pt" @onclick="AddManyObjects">Add many objects</button>
     <button class="btn-primary" style="margin-top: 3pt" @onclick="RemoveAddedObjects">Remove added objects</button>
+    <button class="btn-primary" style="margin-top: 3pt" @onclick="OnRenderToBitmapClicked">RenderToBitmap</button>
     @* <button class="btn-primary" style="margin-top: 3pt" @onclick="CaptureNextFrame">Capture frame in Spector</button> *@
 
     <br />
@@ -45,6 +46,8 @@
 
     <br />
     <p>@_infoText</p>
+    <br/>
+    <canvas id="renderedBitmapCanvas"></canvas>
 </div>
 
 @code {
@@ -596,6 +599,14 @@
         _addedObjects.Clear();
 
         ShowRenderedObjectsCount();
+    }
+
+    private void OnRenderToBitmapClicked()
+    {
+        var rawImageData = sharpEngineSceneView.SceneView.RenderToRawImageData();
+        //ShowInfoMessage($"RenderedToBitmap; first bytes: {string.Join(' ', rawImageData.Data.Take(10).Select(a => a.ToString("X2")))}");
+
+        sharpEngineSceneView.CanvasInterop.ShowRawBitmap("renderedBitmapCanvas", rawImageData.Width, rawImageData.Height, rawImageData.Data);
     }
 
     private void ChangeMaterial()
