--- a/Ab4d.SharpEngine.Samples.BlazorWebAssembly/Pages/ManualInitialization.razor
+++ b/Ab4d.SharpEngine.Samples.BlazorWebAssembly/Pages/ManualInitialization.razor
@@ -37,7 +37,7 @@
     {
         // Initialize the browser interop (load sharp-engine.js file and from javascript get access to exported methods in the CanvasInterop class)
         // Because Blazor uses Single Page Applications style, this needs to be executed only once
-        await CanvasInterop.InitializeInterop();
+        await CanvasInterop.InitializeInterop(JS);
     }
 
     /// <inheritdoc />
