Use ValueTask instead of Task when possible

--- a/Ab4d.SharpEngine.Samples.BlazorWebAssembly/Pages/CommonSamples.razor
+++ b/Ab4d.SharpEngine.Samples.BlazorWebAssembly/Pages/CommonSamples.razor
@@ -176,7 +176,7 @@
         _lastInitializedSample = _currentCommonSample;
     }
 
-    private async Task CaptureNextFrame()
+    private async ValueTask CaptureNextFrame()
     {
         bool success = await sharpEngineSceneView.CanvasInterop.StartSpectorCapture();
 
