--- a/Ab4d.SharpEngine.Samples.BlazorWebAssembly/Layout/MainLayout.razor
+++ b/Ab4d.SharpEngine.Samples.BlazorWebAssembly/Layout/MainLayout.razor
@@ -1,11 +1,11 @@
 ﻿@inherits LayoutComponentBase
-<div class="page">
+<div class="page" style="background: #333; height: 100%;">
     <div class="sidebar">
         <NavMenu />
     </div>
 
-    <main>
-        <article style="padding-left: 0 !important; padding-right: 0 !important; ">
+    <main style="padding: 0.5rem !important; height: 100%;">
+        <article style="background: white; height: 100%;">
             @Body
         </article>
     </main>
