--- a/Ab4d.SharpEngine.Samples.BlazorWebAssembly/Layout/MainLayout.razor.css
+++ b/Ab4d.SharpEngine.Samples.BlazorWebAssembly/Layout/MainLayout.razor.css
@@ -15,7 +15,7 @@ main {
 
 .top-row {
     background-color: #f7f7f7;
-    border-bottom: 1px solid #d6d5d5;
+    border-bottom: solid #d6d5d5 1px;
     justify-content: flex-end;
     height: 3.5rem;
     display: flex;
@@ -70,9 +70,9 @@ main {
         text-align: right;
         width: 0;
     }
-
+/*
     .top-row, article {
         padding-left: 2rem !important;
         padding-right: 1.5rem !important;
-    }
+    }*/
 }
