--- a/Ab4d.SharpEngine.Samples.BlazorWebAssembly/Pages/CommonSamples.razor
+++ b/Ab4d.SharpEngine.Samples.BlazorWebAssembly/Pages/CommonSamples.razor
@@ -1,11 +1,9 @@
 ﻿@page "/commonSamples"
 @page "/commonSamples/{SampleId}"
-@using System.Runtime.InteropServices.JavaScript
 @using Ab4d.SharpEngine.Browser
 @using Ab4d.SharpEngine.Common
 @using Ab4d.SharpEngine.Samples.Common
 @using Ab4d.SharpEngine.Samples.Blazor.UIProvider
-@using Ab4d.SharpEngine.Samples.Common.Cameras
 @inject NavigationManager Navigation
 @inject HttpClient Http
 @inject IJSRuntime JSRuntime
@@ -39,20 +37,21 @@
 </div>
 
 @code {
+
     [Parameter]
     public string? SampleId { get; set; }
 
-    private const string? StartupSample = "AdvancedModels.InstancedMeshNodeSample";
+    //private const string? StartupSample = "Lights.LightsSample"; // StartupSample is not used anymore. Set NavigateTo in the Pages/Index.razor instead.
 
     private const bool ShowCaptureInSpector = true;
 
     private SharpEngineSceneView sharpEngineSceneView = null!;
     private string sample_title = "";
     private string sample_subtitle = "";
-    
+
     private IJSObjectReference? _markedJSModule;
     private string? _markdownHtmlContent;
-    
+
     public SharpEngineSceneView? MainSceneView => sharpEngineSceneView;
 
     private CommonSample? _currentCommonSample;
@@ -70,40 +69,6 @@
         }
     }
 
-    protected override async Task OnParametersSetAsync()
-    {
-        // This is called BOTH:
-        // - when navigating to the page
-        // - AND when the parameter changes while staying on the same page
-        //Console.WriteLine($"Sample changed to: {SampleId}");
-
-        // Reset markdown content
-        _markdownHtmlContent = null;
-
-        var sampleId = SampleId; // Save local SampleId because it may change when waiting on await
-        
-        if (sampleId != null && sampleId.EndsWith(".md", StringComparison.Ordinal))
-        {
-            await ShowMarkdown(sampleId);
-        }
-        else if (sampleId != null)
-        {
-            if (CurrentCommonSample != null)
-            {
-                CurrentCommonSample.Dispose();
-                CurrentCommonSample = null;
-            }
-
-            if (sampleId.EndsWith(".razor"))
-            {
-                Navigation.NavigateTo(sampleId[..^6]); // remove ending ".razor"
-                return;
-            }
-
-            var createdSample = (CommonSample?)CommonSample.CreateSampleObject(uiFramework: "Blazor", sampleId, BlazorSamplesContext.Current, errorMessage => Console.WriteLine(errorMessage));
-            CurrentCommonSample = createdSample;
-        }
-    }
 
     protected override void OnInitialized()
     {
@@ -119,22 +84,67 @@
         if (firstRender)
         {
             BlazorSamplesContext.Current.RegisterCurrentSharpEngineSceneView(sharpEngineSceneView);
-            
+
             sharpEngineSceneView.SceneView.BackgroundColor = Colors.LightSkyBlue;
 
             if (sharpEngineSceneView.IsInitialized)
-                LoadSample();
+                LoadCurrentSample();
             else
-                sharpEngineSceneView.SceneViewInitialized += (sender, args) => LoadSample(); // Wait until the sharpEngineSceneView is created
+                sharpEngineSceneView.SceneViewInitialized += (sender, args) => LoadCurrentSample(); // Wait until the sharpEngineSceneView is created
         }
     }
 
-    private void LoadSample()
+    protected override void OnParametersSet()
+    {
+        // This is called BOTH:
+        // - when navigating to the page
+        // - AND when the parameter changes while staying on the same page
+        //Console.WriteLine($"Sample changed to: {SampleId}");
+
+        LoadSample(SampleId);
+    }
+
+    private void LoadSample(string? sampleId)
+    {
+        // Reset markdown content
+        _markdownHtmlContent = null;
+
+        if (sampleId == null)
+            return;
+
+        if (sampleId.EndsWith(".md", StringComparison.Ordinal))
+        {
+            _ = ShowMarkdown(sampleId); // Do not wait for ShowMarkdown to finish
+        }
+        else
+        {
+            if (CurrentCommonSample != null)
+            {
+                CurrentCommonSample.Dispose();
+                CurrentCommonSample = null;
+            }
+
+            if (sampleId.EndsWith(".razor"))
+            {
+                Navigation.NavigateTo(sampleId[..^6]); // remove ending ".razor"
+                return;
+            }
+
+            var createdSample = (CommonSample?)CommonSample.CreateSampleObject(uiFramework: "Blazor", sampleId, BlazorSamplesContext.Current, errorMessage => Console.WriteLine(errorMessage));
+            CurrentCommonSample = createdSample;
+
+            if (createdSample == null)
+                _markdownHtmlContent = $"Cannot create a CommonSample from sampleId: {sampleId}. See console log for detailed error message.";
+        }
+    }
+
+    private void LoadCurrentSample()
     {
         if (_currentCommonSample != null)
-            InitializeCommonSample(); // Sample was already created - we just need to show it after the sharpEngineSceneView is created
-        else
-            SampleId = StartupSample; // Setting SampleId will load the StartupSample
+        {
+            // Sample was already created - we just need to show it after the sharpEngineSceneView is created
+            InitializeCommonSample(); 
+        }
     }
 
     private void ResetSample()
@@ -257,16 +267,23 @@
 
         if (markdownContent != null)
         {
+
+            string markdownHtmlContent;
+
             try
             {
                 //_markdownHtmlContent = ParseMarked(markdownContent);
-                _markdownHtmlContent = await markedModule.InvokeAsync<string>("parse", markdownContent);
+                markdownHtmlContent = await markedModule.InvokeAsync<string>("parse", markdownContent);
                 //_markdownHtmlContent = await JSRuntime.InvokeAsync<string>("marked.parse", markdownContent);
             }
             catch (Exception ex)
             {
-                _markdownHtmlContent = $"<p>Error parsing markdown file '{sampleId}': {ex.Message}</p>";
+                markdownHtmlContent = $"<p>Error parsing markdown file '{sampleId}': {ex.Message}</p>";
             }
+
+            // If the current sample was not yet changed, then show the markdown content
+            if (sampleId == this.SampleId)
+                _markdownHtmlContent = markdownHtmlContent;
         }
     }
 
